# Data-Shield

./: .gitignore  AGENT_PROMPT.md  APP_SIGNATURES_UPDATE.md  ARCHITECTURE_PLAN.md  BLUEPRINT_INDEX.md  DATA-SHIELD_prompt_FINGERPRINT.md  IMPROVEMENTS.md  PHASE_2_COMPLETION.md  PROJECT_SUMMARY.md  README.md  TESTING_REPORT.md  datashield.spec  pyproject.toml  requirements.txt
.github/agents/: data-shield-agent.agent.md
docs/: GUI_GUIDE.md  PHASE_1_COMPLETION.md  PHASE_2_COMPLETION.md  PROJECT_SUMMARY.md  VAULT_AUTOSCHEDULER_MODES.md  data_shield_blueprint.html  v1.0.0_RELEASE_NOTES.md
scratch/: capture_screenshots.py
src/datashield/: __init__.py  __main__.py
src/datashield/cli/: __init__.py
src/datashield/config/: __init__.py  defaults.py  loader.py  settings.py
src/datashield/core/: app_fingerprint.py  entropy.py  events.py  exceptions.py  findings.py  models.py  pattern_engine.py  risk_scorer.py  scanner.py
src/datashield/export/: __init__.py  exporter.py
src/datashield/gui/: __init__.py  app.py  main_window.py  theme.py  widgets.py  workers.py
src/datashield/i18n/: __init__.py  i18n.py
src/datashield/monitor/: __init__.py  monitor.py
src/datashield/patterns/: app_signatures.py  regex_patterns.py
src/datashield/patterns/yara_rules/: certificates.yar  credentials.yar  high_entropy.yar  ssh_keys.yar  tokens.yar
src/datashield/storage/: __init__.py  database.py  repository.py
src/datashield/vault/: __init__.py  dpapi.py  scheduler.py  vault.py
src/datashield/windows/: __init__.py
tests/: test_phase1.py  test_phase2.py
